--- a/styles/style.css
+++ b/styles/style.css
@@ -161,19 +161,44 @@ nav ul li {
     font-weight: 600;
     padding: 11px 20px 11px 20px;
     border: none;
-    border-radius: 8px;;
+    border-radius: 8px;
+    ;
     cursor: pointer;
 }
-.btn-future:hover{
+
+.btn-future:hover {
     background-color: rgb(0, 106, 80);
     color: rgb(255, 255, 255);
 }
-.btn-future-01{
+
+.btn-future-01 {
     background-color: rgb(84, 144, 245);
 }
-.btn-future-02{
+
+.btn-future-02 {
     background-color: rgb(9, 161, 92);
 }
-.btn-future-03{
+
+.btn-future-03 {
     background-color: rgb(255, 194, 57);
+}
+
+/* speech */
+.speech {
+    margin: 0px 160px 80px 160px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    background-image: url(../assets/quote-bg.png);
+    background-repeat: no-repeat;
+    background-position: 24px 36px;
+    padding: 48px 24px 48px 24px;
+}
+
+.speech-title {
+    margin-top: 12px;
+    margin-bottom: 4px;
+    font-size: 20px;
+    font-weight: 600;
 }
