--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@
     padding: 17px 34px 17px 34px;
     border: none;
     cursor: pointer;
+    border: 1px solid rgb(0, 106, 80);
 
 }
 
@@ -201,4 +202,44 @@ nav ul li {
     margin-bottom: 4px;
     font-size: 20px;
     font-weight: 600;
+}
+
+.description-of-speech {
+    color: rgba(14, 14, 14, 0.8) font-size: 16px;
+    font-weight: 400;
+}
+
+/* Recent News */
+.recent-news {
+    margin: 0px 160px 24px 160px;
+}
+
+.recent-news-container {
+    display: flex;
+    gap: 32px;
+    border-radius: 24px;
+    background: rgb(255, 255, 255);
+    padding: 48px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.09);
+    margin-bottom: 24px;
+}
+
+.recent-title {
+    color: rgba(14, 14, 14, 0.8);
+    font-family: Fira Sans;
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 12px;
+    margin-top: 8px;
+}
+
+.image-info {
+    border-radius: 24px;
+    width: 408px;
+}
+.date-time{
+    display: flex;
+    gap: 12px;
+    margin-top: 12px;
+    margin-bottom: 12px;
 }
