--- a/styles/style.css
+++ b/styles/style.css
@@ -363,3 +363,20 @@ input[type="email"]{
     background-color: rgb(255, 255, 255);
     color: rgb(0, 106, 80);
 }
+/* footer */
+.contact-us{
+    text-align: center;
+    padding: 50px 160px 50px 160px;
+    background: rgb(255, 255, 255);
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.09);
+}
+.contacts{
+    display: flex;
+    gap: 23px;
+    margin-top: 32.5px;
+    justify-content: center;
+}
+hr{
+    color: rgba(14, 14, 14, 0.01);
+    width: 80%;
+}
